# Slide-Automation

./: .gitignore  Mac Deck Render.command  README.md  pyproject.toml
docs/: deck_generation_source_of_truth.md  llm_project_bootstrap_multitemplate_tightened.md  llm_project_bootstrap_updated.md  local_one_step_render.md  mcp_runbook.md  mcp_tool_surface_v1.md  mcp_wrapper.md  slide_automation_project_bootstrap.md  slide_automation_project_bootstrap_v2.md  slide_layout_specs_sloan_poc.md  testing.md  tool_contract.md  wd_donor_inventory.md
examples/: example_deck.json  example_deck_wd.json  example_deck_wd_full_catalog.json  latest.json
output/: latest.pptx
schemas/: deck_schema_v1.json
scripts/: mac_pick_and_render.sh  slide_build_with_setup.sh
src/: image_content_probe.py  inspect_template.py  main.py  placeholder_probe.py  validate_deck_spec.py
src/slide_automation/: __init__.py  api.py  build_cli.py  main.py  renderer.py  template_map.py  utils.py  validate_cli.py
src/slide_automation/mcp/: __init__.py  server_skeleton.py  server_stdio.py  tools_v1.py
src/slide_automation/template_registry/: __init__.py  models.py  registry.py  sloan.py  wd.py  wd_render.py
templates/: Sloan_Template.potx  Sloan_Template.pptx  WD_Template_Donor.pptx
tests/: test_agenda_slide.py  test_build_cli.py  test_divider_and_footer_behavior.py  test_donor_mapping.py  test_mcp_server_stdio.py  test_mcp_tools_v1.py  test_pptx_integrity.py  test_title_fitting_regression.py  test_validate_deck_spec.py  test_validate_wd.py  test_wd_rendering_fidelity.py
